# prototype-test

./: .gitignore  README.md  prototype-test.cabal  users.json
resources/: client.db
snaplets/heist/templates/: index.tpl
snaplets/heist/templates/forms/: login-form.tpl  registration.tpl
snaplets/heist/templates/student/: index.tpl
snaplets/heist/templates/tutor/: index.tpl
src/: Application.hs  Site.hs  Types.hs
src/Controller/: Auth.hs  Course.hs  Index.hs  Register.hs  Student.hs  Tutor.hs
src/Form/: Course.hs  Login.hs  Registration.hs
src/Handler/: Auth.hs  Index.hs
src/Model/: Course.hs  Solution.hs  Student.hs  Task.hs  Tutor.hs
src/OrmLayer/: Course.hs
src/Util/: Auth.hs  Form.hs  ORM.hs  PasswordGenerator.hs
