Name:                prototype-test
Version:             0.1
Synopsis:            Project Synopsis Here
Description:         Project Description Here
License:             AllRightsReserved
Author:              Author
Maintainer:          maintainer@example.com
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.2

Flag development
  Description: Whether to build the server in development (interpreted) mode
  Default: False

Executable prototype-test
  hs-source-dirs: src
  main-is: Main.hs

  Build-depends:
    base >= 4 && < 5,
    bytestring >= 0.9.1 && < 0.10,
    containers >= 0.4.2.1,
    data-lens >= 2.0.1 && < 2.11,
    data-lens-template >= 2.1 && < 2.2,
    digestive-functors >= 0.4.0.0,
    digestive-functors-heist >= 0.4.0.0,
    digestive-functors-snap >= 0.4.0.0,
    email-validate >= 0.2.8,
    heist >= 0.8 && < 0.9,
    HDBC-sqlite3 >= 2.3.3.0,
    MonadCatchIO-transformers >= 0.2.1 && < 0.4,
    mtl >= 2 && < 3,
    random >= 1.0.0.0,
    snap == 0.8.*,
    snap-core   == 0.8.*,
    snap-server == 0.8.*,
    snaplet-hdbc == 0.8.*,
    text >= 0.11 && < 0.12,
    time >= 1.1 && < 1.5,
    xmlhtml == 0.1.*

  if flag(development)
    cpp-options: -DDEVELOPMENT
    -- In development mode, speed is already going to suffer, so skip
    -- the fancy optimization flags.  Additionally, disable all
    -- warnings.  The hint library doesn't give an option to execute
    -- compiled code when there were also warnings, so disabling
    -- warnings allows quicker workflow.
    ghc-options: -threaded -w
  else
    if impl(ghc >= 6.12.0)
      ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                   -fno-warn-orphans -fno-warn-unused-do-bind
    else
      ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                   -fno-warn-orphans

Library
  Hs-Source-Dirs: src

  -- Modules exported by the library.
  Exposed-modules:
    Application,
    Controller.Auth,
    Controller.Course,
    Controller.Index,
    Controller.Register,
    Controller.Student,
    Controller.Tutor,
    Form.Course,
    Form.Login,
    Form.Registration,
    Model.Course,
    Model.Solution,
    Model.Student,
    Model.Task,
    Model.Tutor,
    Site,
    Types,
    Util.Auth,
    Util.Form,
    Util.ORM,
    Util.PasswordGenerator
